--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Checkfront Api : Developer Resources" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Checkfront Api by Checkfront</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Checkfront Api</title>
   </head>
-
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Checkfront/API">View on GitHub</a>
+      <header>
+        <h1>Checkfront Api</h1>
+        <p>Developer Resources</p>
+      </header>
 
-          <h1 id="project_title">Checkfront Api</h1>
-          <h2 id="project_tagline">Developer Resources</h2>
+      <div id="banner">
+        <span id="logo"></span>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Checkfront/API/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Checkfront/API/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <a href="https://github.com/Checkfront/API" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/Checkfront/API/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/Checkfront/API/tarball/master" class="button">TAR</a></li>
+          </ul>
+        </div>
+      </div><!-- end banner -->
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p><img src="https://www.checkfront.com/images/brand/Checkfront-Logo-45.png" alt="Checkfront API"></p>
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <h1>Checkfront API</h1>
 
-<h1>Checkfront API</h1>
+<p><img src="https://www.checkfront.com/images/brand/Checkfront-Logo-45.png" alt="Checkfront API"></p>
 
 <p><em>version 2.1</em></p>
 
@@ -551,16 +559,12 @@ https://your-company.checkfront.com/oauth/
 
 <p>Have questions on the API?  E-mail us at <a href="code@checkfront.com">code@checkfront.com</a>.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Checkfront Api maintained by <a href="https://github.com/Checkfront">Checkfront</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/Checkfront">Checkfront</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -571,7 +575,6 @@ https://your-company.checkfront.com/oauth/
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
