Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,40 +4,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Checkfront Api by Checkfront</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-
+    <div class="wrapper">
       <header>
         <h1>Checkfront Api</h1>
         <p>Developer Resources</p>
+        <p class="view"><a href="https://github.com/Checkfront/API">View the Project on GitHub <small>Checkfront/API</small></a></p>
+        <ul>
+          <li><a href="https://github.com/Checkfront/API/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/Checkfront/API/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Checkfront/API">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/Checkfront/API" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/Checkfront/API/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/Checkfront/API/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
       <section>
         <h1>Checkfront API</h1>
 
@@ -559,11 +547,11 @@ https://your-company.checkfront.com/oauth/
 
 <p>Have questions on the API?  E-mail us at <a href="code@checkfront.com">code@checkfront.com</a>.</p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/Checkfront">Checkfront</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
-      </footer>
     </div>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/Checkfront">Checkfront</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
