--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Checkfront Api by Checkfront</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Checkfront Api : Developer Resources" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>Checkfront Api</title>
   </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Checkfront Api</h1>
-        <p>Developer Resources</p>
-        <p class="view"><a href="https://github.com/Checkfront/API">View the Project on GitHub <small>Checkfront/API</small></a></p>
-        <ul>
-          <li><a href="https://github.com/Checkfront/API/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Checkfront/API/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Checkfront/API">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h1>Checkfront API</h1>
 
-<p><img src="https://www.checkfront.com/images/brand/Checkfront-Logo-45.png" alt="Checkfront API"></p>
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/Checkfront/API">View on GitHub</a>
+
+          <h1 id="project_title">Checkfront Api</h1>
+          <h2 id="project_tagline">Developer Resources</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/Checkfront/API/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Checkfront/API/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p><img src="https://www.checkfront.com/images/brand/Checkfront-Logo-45.png" alt="Checkfront API"></p>
+
+<h1>Checkfront API</h1>
 
 <p><em>version 2.1</em></p>
 
@@ -548,11 +552,15 @@ https://your-company.checkfront.com/oauth/
 <p>Have questions on the API?  E-mail us at <a href="code@checkfront.com">code@checkfront.com</a>.</p>
       </section>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/Checkfront">Checkfront</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Checkfront Api maintained by <a href="https://github.com/Checkfront">Checkfront</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -563,6 +571,7 @@ https://your-company.checkfront.com/oauth/
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
